--- a/src/sniffler/web_ui/templates/web_ui/base.html
+++ b/src/sniffler/web_ui/templates/web_ui/base.html
@@ -13,6 +13,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'scan' %}">Scan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'stats' %}">Statistics</a></li>
                 </ul>
             </div>
         </div>
