--- a/src/sniffler/web_ui/templates/web_ui/home.html
+++ b/src/sniffler/web_ui/templates/web_ui/home.html
@@ -14,6 +14,7 @@
             <li>Click the "Start Scan" button to begin the scan.</li>
             <li>View the scan results in the scan history section.</li>
             <li>You can set a scan as active to access it on other pages.</li>
+            <li>Visit the <a href="{% url 'stats' %}">Statistics</a> page to see detailed information about your active scan.</li>
         </ol>
     </div>
 {% endblock %}
