feat: sort scans by creation date in descending order on scan page

--- a/src/sniffler/web_ui/templates/web_ui/scan.html
+++ b/src/sniffler/web_ui/templates/web_ui/scan.html
@@ -29,7 +29,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for scan in scans %}
+                        {% for scan in scans|dictsortreversed:"created_at" %}
                             <tr>
                                 <td>{{ scan.path }}</td>
                                 <td>{{ scan.created_at|date:"d-m-Y H:i" }}</td>
