--- a/src/sniffler/web_ui/templates/web_ui/scan.html
+++ b/src/sniffler/web_ui/templates/web_ui/scan.html
@@ -20,12 +20,13 @@
             <h2 class="card-title">Scan History</h2>
             <form method="post">
                 {% csrf_token %}
-                <table class="table">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>Path</th>
                             <th>Created At</th>
                             <th>Action</th>
+                            <th>Remove</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -35,6 +36,9 @@
                                 <td>{{ scan.created_at|date:"d-m-Y H:i" }}</td>
                                 <td>
                                     <button type="submit" name="scan_id" value="{{ scan.id }}" class="btn btn-primary">Set Active</button>
+                                </td>
+                                <td>
+                                    <button type="submit" name="remove_scan_id" value="{{ scan.id }}" class="btn btn-danger">Remove</button>
                                 </td>
                             </tr>
                         {% endfor %}
